syntax = "proto3";
package haberdasher;

import "google/protobuf/timestamp.proto";

message Empty {}

service AgentSubscriber {
    rpc HandleAgentRequests (stream AgentResponse) returns (stream AgentRequest);
    rpc PublishVenueUpdates (stream Venue) returns (Empty);
}

service AgentAggregator {
    rpc SubscribeToVenueUpdates (Empty) returns (stream Venue);
}

message AgentRequest {
    int64 seqno = 1;
    oneof kind {
        ListVenuesRequest list_venues = 2;
    }
}

message AgentResponse {
    int64 seqno = 1;
    oneof kind {
        AgentErrorResponse error = 2;
        ListVenuesResponse list_venues = 3;
    }
}

message AgentErrorResponse {
    string message = 1;
}

message ListVenuesRequest {
    google.protobuf.Timestamp with_updates_since = 1;
}

message ListVenuesResponse {
    repeated Venue venues = 1;
}

message Agent {
    string name = 1;
    string version = 2;
    string revision = 3;
}

message Individual {
    string id = 1;
    string name = 2;
}

message Group {
    string id = 1;
    string name = 2;
}

message Performer {
    oneof kind {
        Individual individual = 1;
        bool service = 2;
        bool myself = 3;
    }
}

message Origin {
    message Segment {
        Individual individual = 1;
        Group group = 2;
        bool service = 3;
        string service_instance = 4;
        bool myself = 5;
        bool themself = 6;
        string agent = 7;
    }
    repeated Segment path = 1;
}

message Message {
    Origin.Segment performer = 1;
    google.protobuf.Timestamp at = 2;
    oneof content {
        string text = 3;
        string pose = 4;
    }
}

message Venue {
    Origin origin = 1;
    Message last_message = 2;
}
